--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=knittda-server
-spring.datasource.url=jdbc:mysql://localhost:3306/knittda-db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/knittda_db
 spring.datasource.username=user
 spring.datasource.password=a123456789!
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
