--- a/.gitignore
+++ b/.gitignore
@@ -1,89 +1,11 @@
-HELP.md
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
-
-
-### Java ###
-/target/
-/*.iml
-/.idea/
-/.gradle/
-/build/
-/out/
-
-### Logs ###
-*.log
-
-### Spring Boot ###
-!src/main/resources/application.yml
-!src/main/resources/application.properties
-src/main/resources/application-*.yml
-src/main/resources/application-*.properties
-
-### OS ###
-.DS_Store
-Thumbs.db
-
-### Docker ###
-/docker-data/
-/mysql-data/
-*.pid
-
-### Others ###
-.env
-*.swp
-*.swo
-*.bak
-
-### Test Reports ###
-/test-output/
-/coverage/
-/reports/
-
-### IDE ###
-.idea/
-
-### Mac ###
-.AppleDouble
-.LSOverride
 
 ### npm or yarn (프론트 대비) ###
 node_modules/
+mysql-data/*
+build/*
 
-### Swagger JSON ###
-/swagger-output/
-
+*/application-private.properties
+src/main/resources/application-private.properties
+.gitignore
+mysql-data/
