--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./mysql-data:/var/lib/mysql
+      - /Users/jisoolee/Documents/mysql-data:/var/lib/mysql
     restart: always
 
   app:
