--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    jacksonVersion = '2.16.1'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -39,14 +43,24 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     // Jackson for JSON processing
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.1'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.9.0'
+
+
+    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
+
+    implementation("io.jsonwebtoken:jjwt-jackson:0.11.2") {
+        exclude group: "com.fasterxml.jackson.core"
+    }
+    implementation("io.sentry:sentry-spring-boot-starter-jakarta:7.9.0") {
+        exclude group: "com.fasterxml.jackson.core"
+    }
 
 }
 
